--- a/iris-dataset-tasks.ipynb
+++ b/iris-dataset-tasks.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        " 'data_module': 'sklearn.datasets.data'}"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename', 'data_module'])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "(150, 4)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        " 'petal width (cm)']"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "       [5.9, 3. , 5.1, 1.8]])"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
        "4  setosa  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
        "149  virginica  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
        "max            2.500000  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -1176,10 +1176,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x73647c10f7d0>]"
+       "[<matplotlib.lines.Line2D at 0x73647be62840>]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1208,6 +1208,36 @@
     "\n",
     "plt.scatter(x, y)\n",
     "plt.plot(x, poly(x), label='Linear Fit', color='orange')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 7: Analyze Class Distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instruction: Create box-plots of the petal lengths for each of the three classes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A boxplot summarizes the distribution of a data set.\n",
+    "# The first thing to do is to group data by species \n",
+    "species = ['setosa', 'versicolor', 'virginica']\n",
+    "\n",
+    "# List of three Series objects one for each species’ petal lengths.\n",
+    "#https://www.w3schools.com/python/python_lists_comprehension.asp\n",
+    "iris_data_boxplot = [df[df['species'] == sp_name]['petal length (cm)'] for sp_name in species]\n",
+    "\n"
    ]
   },
   {
